deployment/kubernetes/keycloak/keycloak-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: keycloak
  namespace: bookstore
spec:
  tls:
    - hosts:
      - keycloak.192.168.49.2.nip.io #KEYCLOAK_HOST
  rules:
  - host: keycloak.192.168.49.2.nip.io #KEYCLOAK_HOST
    http:
      paths:
      - backend:
          serviceName: keycloak
          servicePort: 8080
